feat: update blog titles and descriptions

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,15 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import Introduction from "../components/Introduction.astro";
 import Featured from "../components/Featured.astro";
+import Introduction from "../components/Introduction.astro";
 import Newsletter from "../components/Newsletter.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout
-  title="Ryze"
-  description="A minimalist Astro starter for personal blogs."
-  author="Rahul"
-  url="https://ryze.pages.dev"
+  title="Geraint Guan"
+  description="Geraint Guan's personal software & product development blog."
+  author="Geraint Guan"
+  url="https://dev.geraint.io"
 >
   <div class="center">
     <section>
