--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import ThemeToggle from "./ThemeToggle";
-import Navigation from "./Navigation.astro";
 import IconRss from "../assets/icons/rss.svg";
+import Navigation from "./Navigation.astro";
+import ThemeToggle from "./ThemeToggle";
 ---
 
 <header
@@ -12,7 +12,7 @@ import IconRss from "../assets/icons/rss.svg";
     class:list={[
       "text-xl tracking-wider select-none",
       Astro.url.pathname === "/" ? "text-accent" : "",
-    ]}>Ryze</a
+    ]}>Geraint Guan</a
   >
   <div class="flex items-center justify-center gap-6">
     <Navigation />
