--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -4,7 +4,8 @@
 
 <h2 class="section-heading">N E W S L E T T E R</h2>
 <p class="paragraph my-3 text-center leading-loose">
-  Get latest updates every weekend
+  Updates and summaries of my articles every month, delivered straight to your
+  inbox.
 </p>
 <form
   class="flex items-center justify-center gap-3 select-none"
@@ -17,7 +18,7 @@
     autocomplete="email"
     type="email"
     class="focus:ring-accent ring-foreground/60 placeholder:text-foreground/40 rounded-lg px-4 py-1 leading-relaxed opacity-90 ring-1 outline-0"
-    placeholder="yourname@email.com"
+    placeholder="ada.lovelace@email.com"
   />
   <button type="submit" class="button animation">Subscribe</button>
 </form>
