--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,25 +1,27 @@
 ---
-import IconGithub from "../assets/icons/brand-github.svg";
-import IconYoutube from "../assets/icons/brand-youtube.svg";
-import IconLinkedin from "../assets/icons/brand-linkedin.svg";
 import IconDiscord from "../assets/icons/brand-discord.svg";
-import IconTwitter from "../assets/icons/brand-x.svg";
+import IconGithub from "../assets/icons/brand-github.svg";
+import IconLinkedin from "../assets/icons/brand-linkedin.svg";
 ---
 
 <div class="flex items-center justify-center space-x-6 pb-8">
-  <a href="https://github.com/" target="blank" aria-label="gitbub"
+  <a href="https://github.com/geraintguan" target="blank" aria-label="gitbub"
     ><IconGithub class="socials" /></a
   >
-  <a href="https://youtube.com/" target="blank" aria-label="youtube"
+  <!-- <a href="https://youtube.com/" target="blank" aria-label="youtube"
     ><IconYoutube class="socials" /></a
+  > -->
+  <a
+    href="https://www.linkedin.com/in/geraintguan/"
+    target="blank"
+    aria-label="linkedin"><IconLinkedin class="socials" /></a
   >
-  <a href="https://in.linkedin.com" target="blank" aria-label="linkedin"
-    ><IconLinkedin class="socials" /></a
+  <a
+    href="https://discord.com/users/1188992282167357600"
+    target="blank"
+    aria-label="discord"><IconDiscord class="socials" /></a
   >
-  <a href="https://discord.com" target="blank" aria-label="discord"
-    ><IconDiscord class="socials" /></a
-  >
-  <a href="https://twitter.com" target="blank" aria-label="twitter"
+  <!-- <a href="https://twitter.com" target="blank" aria-label="twitter"
     ><IconTwitter class="socials" /></a
-  >
+  > -->
 </div>
