--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -1,12 +1,15 @@
 ---
-
+import Socials from "./Socials.astro";
 ---
 
-<h1 class="heading">Welcome! 👋</h1>
+<h1 class="heading">Zero → Small</h1>
 <div class="paragraph">
   <p>
-    This is my personal blog where I share my thoughts, experiences, learnings,
-    and random musings, in the realms of all things software and product
-    development.
+    A blog about the (fun) trials and tribulations of building, launching, and
+    scaling software products yours truly,
+    <a href="https://www.geraint.io/" class="hover:text-accent underline"
+      >Geraint Guan</a
+    >.
   </p>
+  <Socials />
 </div>
