--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -2,10 +2,9 @@
 
 ---
 
-<h2 class="section-heading">N E W S L E T T E R</h2>
+<!-- TODO: Hide until I implement newsletter service --><!-- <h2 class="section-heading">N E W S L E T T E R</h2>
 <p class="paragraph my-3 text-center leading-loose">
-  Updates and summaries of my articles every month, delivered straight to your
-  inbox.
+  Monthly updates direct to your inbox.
 </p>
 <form
   class="flex items-center justify-center gap-3 select-none"
@@ -21,4 +20,4 @@
     placeholder="ada.lovelace@email.com"
   />
   <button type="submit" class="button animation">Subscribe</button>
-</form>
+</form> -->
