--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,19 @@
 ---
-import Socials from "./Socials.astro";
+
 ---
 
 <footer class="footer-margin sticky bottom-0 z-0">
-  <Socials />
   <div
     class="text-foreground/50 flex items-center justify-between text-sm select-none"
   >
-    <p>© 2025 MIT License</p>
+    <p>© 202 MIT License</p>
     <p>
       powered by <a
         href="https://astro.build"
         target="blank"
         class="hover:text-accent"
         aria-label="astro site">Astro</a
-      > &
+      >, theme based on
       <a
         href="https://ryze.pages.dev"
         class="hover:text-accent"
