--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
   <div
     class="text-foreground/50 flex items-center justify-between text-sm select-none"
   >
-    <p>© 202 MIT License</p>
+    <p>© 2026 Geraint Guan | MIT License</p>
     <p>
       powered by <a
         href="https://astro.build"
