docs: clarify blog content scope in introduction
Adds disclaimer that content may occasionally extend beyond the primary focus of software product scaling to include related musings.

--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -9,7 +9,7 @@ import Socials from "./Socials.astro";
     scaling software products yours truly,
     <a href="https://www.geraint.io/" class="hover:text-accent underline"
       >Geraint Guan</a
-    >.
+    >. May include occasional musings on semi-related topics.
   </p>
   <Socials />
 </div>
