--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -193,7 +193,7 @@
 
     /* media */
     img {
-      @apply ring-accent ring-1 transition-all duration-150 ease-in-out group-hover:brightness-75;
+      @apply transition-all duration-150 ease-in-out group-hover:brightness-75;
     }
     iframe {
       @apply ring-accent my-8 ring-1 select-none;
