feat: new blog post

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,9 +4,18 @@
 
 <footer class="footer-margin sticky bottom-0 z-0">
   <div
-    class="text-foreground/50 flex items-center justify-between text-sm select-none"
+    class="text-foreground/50 flex flex-col items-center justify-between text-sm select-none sm:flex-row"
   >
-    <p>© 2026 Geraint Guan | MIT License</p>
+    <p class="hidden flex-row lg:flex">
+      2026 © Geraint Guan all content licensed under&nbsp;<a
+        href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a
+      >
+    </p>
+    <p class="flex flex-row lg:hidden">
+      2026 © Geraint Guan&nbsp;<a
+        href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a
+      >
+    </p>
     <p>
       powered by <a
         href="https://astro.build"
