--- a/src/components/Introduction.astro
+++ b/src/components/Introduction.astro
@@ -1,15 +1,12 @@
 ---
-import Socials from "./Socials.astro";
+import Socials from "./Socials.astro"
 ---
 
-<h1 class="heading">Zero → Small</h1>
-<div class="paragraph">
+<div class="paragraph pt-12">
   <p>
     A blog about the (fun) trials and tribulations of building, launching, and
-    scaling software products by yours truly,
-    <a href="https://www.geraint.io/" class="hover:text-accent underline"
-      >Geraint Guan</a
-    >. May include occasional musings on semi-related topics.
+    scaling software products. May include occasional musings on semi-related
+    topics.
   </p>
   <Socials />
 </div>
