--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,13 +22,13 @@
 .dark {
   --background: var(--color-zinc-800);
   --foreground: var(--color-zinc-300);
-  --accent: var(--color-amber-400);
+  --accent: #ef47ae;
 }
 
 .light {
   --background: var(--color-gray-100);
   --foreground: var(--color-gray-800);
-  --accent: var(--color-amber-600);
+  --accent: #ef47ae;
 }
 
 /* CODE BLOCK */
