fix: standardize import statements and add missing semicolons

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
-import { Image } from "astro:assets"
-import IconRss from "../assets/icons/rss.svg"
-import logo from "../assets/images/logo.png"
-import Navigation from "./Navigation.astro"
-import ThemeToggle from "./ThemeToggle"
+import { Image } from "astro:assets";
+import IconRss from "../assets/icons/rss.svg";
+import logo from "../assets/images/logo.png";
+import Navigation from "./Navigation.astro";
+import ThemeToggle from "./ThemeToggle";
 ---
 
 <header
