--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,19 +1,19 @@
 ---
 export interface Props {
-  title: string
-  description: string
-  author: string
-  url: string
-  pubDate?: Date
+  title: string;
+  description: string;
+  author: string;
+  url: string;
+  pubDate?: Date;
 }
 
-import "@fontsource-variable/space-grotesk"
-import "@fontsource/ibm-plex-mono"
-import Seo from "../components/Seo.astro"
-import Header from "../components/Header.astro"
-import Footer from "../components/Footer.astro"
-import "../styles/global.css"
-const { title, description, author, url, pubDate } = Astro.props
+import "@fontsource-variable/space-grotesk";
+import "@fontsource/ibm-plex-mono";
+import Seo from "../components/Seo.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import "../styles/global.css";
+const { title, description, author, url, pubDate } = Astro.props;
 ---
 
 <!doctype html>
@@ -25,13 +25,13 @@ const { title, description, author, url, pubDate } = Astro.props
     <meta name="generator" content={Astro.generator} />
     <Seo {title} {description} {author} {url} {pubDate} />
     <script is:inline>
-      const saved = localStorage.getItem("theme")
+      const saved = localStorage.getItem("theme");
       const prefersDark = window.matchMedia(
         "(prefers-color-scheme: dark)",
-      ).matches
+      ).matches;
       document.documentElement.classList.add(
         saved || (prefersDark ? "dark" : "light"),
-      )
+      );
     </script>
   </head>
   <body class="body-margin">
